crates/biome_js_analyze/tests/specs/nursery/noVueRefAsOperand/invalid-export-default-setup.vue
/* should generate diagnostics */

<script>
import { ref } from 'vue'
export default {
  setup() {
    let count = ref(0)
    count++ // error
    console.log(count + 1) // error
    console.log(1 + count) // error
    return { count }
  }
}
</script>
